fix: make sure the dropdown panel flips when it overflows the viewport for date pickers

--- a/packages/veui-theme-dls/components/calendar.less
+++ b/packages/veui-theme-dls/components/calendar.less
@@ -467,11 +467,9 @@
   &-range-end,
   &-in-range:first-child,
   &-in-range:last-child {
-    .@{veui-prefix}-calendar-month-table,
-    .@{veui-prefix}-calendar-year-table {
-      &::before {
-        width: 50%;
-      }
+    .@{veui-prefix}-calendar-month-table &::before,
+    .@{veui-prefix}-calendar-year-table &::before {
+      width: 50%;
     }
   }
 
